# lightrag-mcp

./: .dockerignore  .env.example  .gitignore  BACKWARD_COMPATIBILITY_REPORT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: lightrag_mcp_update_guide.md
src/lightrag_mcp/: config.py  event_store.py  http_server.py  lightrag_client.py  main.py  security.py  server.py
tests/: conftest.py  test_backward_compatibility.py  test_config.py  test_event_store.py  test_http_transport.py  test_integration.py  test_security.py
